# tree-sitter-faust

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/c/: tree-sitter-faust.pc.in
bindings/c/tree_sitter/: tree-sitter-faust.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  binary.txt  documentation.txt  environment.txt  foreign.txt  iteration.txt  modulation.txt  number.txt  operators.txt  pattern.txt  primitive.txt  ui.txt  variant.txt  variants.txt
