[package]
name = "tree-sitter-faust"
description = "Tree-sitter grammar for the Faust audio programming language"
version = "1.1.5"
authors = ["Karl Hiner"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "faust"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/khiner/tree-sitter-faust"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.0"
